# CSD2

./: CMakeLists.txt  wth.txt
CSD2B/: CMakeLists.txt
CSD2B/Assignments/: CMakeLists.txt
CSD2B/Assignments/_session1/: CMakeLists.txt
CSD2B/Assignments/_session1/4_simpleInheritance_final/: animal.cpp  animal.h  bird.cpp  bird.h  main.cpp  pet.cpp  pet.h
CSD2B/Assignments/_session1/extra_note/: main_extra_note.cpp
CSD2B/Assignments/_session1/speaker_with_Woofer/: main.cpp
CSD2B/Assignments/extra_note/: CMakeLists.txt
CSD2B/Assignments/session2/: CMakeLists.txt
CSD2B/Assignments/session2/5_soundingSine/: saw.cpp  saw.h  square.cpp
CSD2B/Assignments/session2/SoundingSine/: CMakeLists.txt  square.h
CSD2B/Assignments/session2/SoundingSineInheritanceTest/: CMakeLists.txt  customCallback.h  oscillator.cpp  oscillator.h  sine.cpp  sine.h
CSD2B/Assignments/session2/SoundingSine_W_OscillatorClass/: CMakeLists.txt  oscillator.cpp  oscillator.h  saw.h
CSD2B/Assignments/session3/: CMakeLists.txt
CSD2B/Assignments/session3/OrganSynth/: CMakeLists.txt  customCallback.h  oscillator.cpp  oscillator.h  synth.cpp  synth.h
CSD2B/Assignments/session3/OrganSynth_W_OSClass/: CMakeLists.txt  customCallback.h  organsynth.cpp  organsynth.h  oscillator.cpp  square.cpp  square.h  synth.cpp  synth.h
CSD2B/Assignments/session3/Organ_MelodyTest/: CMakeLists.txt  callback.cpp  callback.h  customCallback.h  organsynth.cpp  organsynth.h  oscillator.cpp  oscillator.h  square.cpp
CSD2B/Assignments/session4/: CMakeLists.txt
CSD2B/Assignments/session4/UI_Synth/: CMakeLists.txt  callback.cpp  main.cpp  melody.cpp  synth.h
CSD2B/Assignments/session4/UI_Utils_Test/: CMakeLists.txt  oscillator.cpp  oscillator.h  saw.cpp  saw.h  sine.cpp  sine.h  square.h  uiUtilities.cpp
CSD2B/SynthSong/: CMakeLists.txt  design.txt  learningGoals.text  learninggoals_reflection.txt
CSD2B/SynthSong/Codebase/: CMakeLists.txt  additivesynth.cpp  additivesynth.h  callback.cpp  callback.h  fmsynth.cpp  fmsynth.h  melody.cpp  melody.h  note.cpp  note.h  organsynth.cpp  organsynth.h  oscillator.cpp  oscillator.h  saw.cpp  saw.h  sine.cpp  sine.h  square.cpp  square.h  synth.cpp  synth.h  uiUtilities.cpp
CSD2C/: CMakeLists.txt
CSD2C/Assignments/: design.txt  learningGoals.txt
CSD2C/cc4/: Filters.h
CSD2C/codebase_CF/: CMakeLists.txt  callback.cpp  callback.h
CSD2C/codebase_CF/csd_lib/effects/: CMakeLists.txt  bitcrusher.cpp  bitcrusher.h  effect.h  filter.h  simpleLadder.cpp  simpleLadder.h
Irregular_Beat_Generator/: Beat_code.py  code.txt  concept.txt  dictionary_test.py  event_handling.py  step_generation.py
Opdrachten/: Week3.py  Week3_deel2.py
python_basics/: audio_example.py  helloworld.py  playsound.py
